--- a/css/search.css
+++ b/css/search.css
@@ -1,9 +1,9 @@
-.search-results{
+.search-results {
     width: 100%;
     padding: 60px 0;
 }
 
-.heading{
+.heading {
     font-size: 20px;
     text-transform: capitalize;
     font-weight: 400;
@@ -12,15 +12,18 @@
 
 }
 
-.heading span{
+.heading span {
     font-weight: 700;
 }
 
 
-.product-container-grid{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+.product-container-grid {
+    display: flex;
+    flex-wrap: wrap;
     height: auto;
-    grid-row-gap: 40px;
-    padding: 0 5vw;
+    justify-content: center;
+}
+
+.product-container-grid>.product-card {
+margin-bottom: 7%;
 }
